--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,31 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+
+    <style name="ButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:gravity">center</item>
+        <item name="android:height">44dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:stateListAnimator">@null</item>
+    </style>
+
+    <style name="ButtonGreen" parent="ButtonStyle">
+        <item name="android:background">@drawable/bg_green_with_radius_10</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <style name="ButtonWhiteWithBorderGreen" parent="ButtonStyle">
+        <item name="android:background">@drawable/bg_white_with_border_green_radius_10</item>
+        <item name="android:textColor">@color/green</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <style name="ErrorTextAppearance" parent="@style/TextAppearance.AppCompat">
+        <item name="android:textColor">@color/lipstick</item>
+        <item name="android:textSize">0sp</item>
+    </style>
 </resources>
