--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <item name="android:paddingRight">16dp</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:stateListAnimator">@null</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="ButtonGreen" parent="ButtonStyle">
@@ -26,8 +27,4 @@
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
     </style>
 
-    <style name="ErrorTextAppearance" parent="@style/TextAppearance.AppCompat">
-        <item name="android:textColor">@color/lipstick</item>
-        <item name="android:textSize">0sp</item>
-    </style>
 </resources>
